# esp32-drone-flocking

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  LORA_INTEGRATION_GUIDE.md  QUICK_START.md  README.md  eduroam_mqtt_test.code-workspace  sdkconfig
main/: CMakeLists.txt  EspHal.h  Kconfig.projbuild  globals.hpp  idf_component.yml  lora_radio.c  main.c  main.cpp  neighbor.c  packet.c  performance.c  physics.c  security.c
main/config/: params.hpp  team_key.hpp
main/core/: cmac.cpp  cmac.hpp  metrics.cpp  metrics.hpp  neighbors.cpp  neighbors.hpp  packet.cpp  packet.hpp  state.hpp
main/drivers/: radio_lora.cpp  radio_lora.hpp
main/include/: config.h  lora_radio.h  neighbor.h  packet.h  performance.h  physics.h  security.h
main/net/: mqtt_client.cpp  mqtt_client.hpp
main/tasks/: task_control.cpp  task_control.hpp  task_physics.cpp  task_physics.hpp  task_radio.cpp  task_radio.hpp  task_telemetry.cpp  task_telemetry.hpp
